Tietokantawrapperi uudistettu, uploadin validoinnit tehty ja tiedoston lataamista aloiteltu.

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -36,9 +36,9 @@ $var show_login_form: True
         </div>
         <span>
           $m.code
-          : <a href=$path(m)>$m.title</a>
+          : <a href="/download/$m.id">$m.title</a>
         </span>
-        <div class="listitem-comments"><a href="">Kommentteja: 12</a></div>
+        <div class="listitem-comments"><a href="">Kommentteja: 12</a> <small class="pull-right"><i class="icon-file"></i>.$m.type $m.size kb</small></div>
       </div>
     </div>
 
