--- a/templates/user/upload.html
+++ b/templates/user/upload.html
@@ -1,4 +1,4 @@
-$def with (id, code, title)
+$def with (id, code, course_title, error, material_title, description, tags)
 $var title: Kurssimateriaalit 0.1 - Lisää uusi materiaali
 $var show_login_form: True
 
@@ -15,19 +15,30 @@ $var show_login_form: True
       </div>
 
       <form class="form" enctype="multipart/form-data" action="" method="POST">
-          <h2>Lisää materiaali:<br><small><span class="label">$code</span> $title</small></h2>
-          
+          <h2>Lisää materiaali:<br><small><span class="label">$code</span> $course_title</small></h2>
+          $if error:
+            <div class="alert alert-error">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              $if error == "bad_title":
+                <strong>Virhe!</strong> Materiaalin nimi ei ole sallitussa muodossa.
+              $elif error == "bad_filetype":
+                <strong>Virhe!</strong> Tiedostotyyppi ei ole sallittu.
+              $elif error == "bad_zip":
+                <strong>Virhe!</strong> Zip-tiedosto sisältää ei-sallittuja tiedostoja.
+              $elif error == "bad_filesize":
+                <strong>Virhe!</strong> Tiedoston maksimikoko on 10MB.
+            </div>
           <label>Materiaalin nimi (4-30 merkkiä) *</label>
-          <input type="text" name="title" value="Materiaalin nimi" placeholder="Materiaalin nimi" required pattern="^.{4,30}$$">
+          <input type="text" name="title" value="$material_title" placeholder="Materiaalin nimi" required pattern="^.{4,30}$$">
           
           <label>Kuvaus (Enintään 100 merkkiä)</label>
-          <textarea rows="3" name="description" placeholder="Lyhyt kuvaus..."></textarea>
+          <textarea rows="3" name="description" placeholder="Lyhyt kuvaus...">$description</textarea>
           
           <label>Tagit (Enintään 5, erottele välilyönneillä tai pilkuilla)</label>
-          <input type="text" name="tags" placeholder="tagi1, tagi2, ...">
+          <input type="text" name="tags" value="$tags" placeholder="tagi1, tagi2, ...">
           
-          <label>Tiedoston maksimikoko <strong>5MB</strong>, sallitut tiedostomuodot jpeg,gif,png,html,txt,org,ppt,pdf</label>
-          <input type="file" name="myfile">
+          <label id="filelabel">Tiedoston maksimikoko <strong>10MB</strong>, sallitut tiedostomuodot jpeg,gif,png,html,txt,org,ppt,pdf</label>
+          <input type="file" name="myfile" required>
 
           <br>
           <br>
@@ -35,12 +46,30 @@ $var show_login_form: True
         
       </form>
 
-   </div></div></div>   
-      
-      
+    </div> <!-- span8 offset2 -->
+  </div> <!-- row -->
+</div> <!-- container -->   
+ 
 <script>
-// Focus on search form:
+// Focus on material form:
 window.onload = function(){
-    $$("input").select();
-}
+    $if error in ["bad_filesize", "bad_filetype", "bad_zip"]:
+        $$("input[name='myfile']").focus();
+    $else:
+        $$("input[name='title']").select();
+
+    //binds to onchange event of your input field
+    $$("input[type='file']").bind("change", function() {
+        $$(".alert").remove();
+        //this.files[0].size gets the size of your file.
+        if (this.files[0].size > 10 * 1024 * 1024) {
+            $$("button").attr("disabled", true);
+            $$("label#filelabel").addClass("text-error");
+        } else {
+            $$("button").attr("disabled", false);
+            $$("label#filelabel").removeClass("text-error");
+        }
+
+    });
+  }
 </script>
