--- a/templates/reader/base.html
+++ b/templates/reader/base.html
@@ -1,5 +1,6 @@
 $def with (content)
 
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -7,9 +8,10 @@ $def with (content)
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css">
-
 </head>
 <body>
+  
+      
      <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -26,7 +28,7 @@ $def with (content)
                 <li class="active"><a href="/materials">Materiaalit</a></li>
             $else:
                 <li><a href="/courses">Kurssit</a></li>
-                <li><a href="/materials">Materiaalit</a></li>
+                <li><a href="/materials">Materiaalit</a></li>  
           </ul>
 
           $if session.login:
@@ -42,7 +44,7 @@ $def with (content)
               <form class="navbar-form pull-right" action="/logout" method="POST">
                 <button type="submit" class="btn btn-danger">Kirjaudu ulos</button>
               </form>
-              <p class="navbar-text pull-right">Kirjautunut käyttäjänä <a href="#profile"><b>$session.username</b></a></p>
+              <p class="navbar-text pull-right">Kirjautunut käyttäjänä <a href="#profile"><b>$session.user</b></a></p>
               
           $elif content.show_login_form == "True":
               <form class="navbar-form pull-right" action="/login" method="POST">
@@ -52,14 +54,17 @@ $def with (content)
               </form>
               <p class="navbar-text pull-right"><a href="/register">Rekisteröidy</a></p>
                 
-            
-        </div>
-      </div>
-    </div>
+        </div> <!--/.container-->
+      </div> <!--/.navbar-inner-->
+    </div> <!--/.navbar-->
+
 
     $:content
     
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>    
+
+    <!-- Supposedly makes pages load faster..? -->
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+</script>
 </body>
 </html>
