--- a/templates/reader/index.html
+++ b/templates/reader/index.html
@@ -2,7 +2,7 @@ $def with (new_materials, top_materials)
 $var title: Kurssimateriaalit 0.1 - Index
 $var show_login_form: True
 
-<div id="index-container" class="container">
+<div class="container">
 
   <!-- HEADER -->
   <div class="hero-unit">
@@ -11,12 +11,11 @@ $var show_login_form: True
     <br>
     <a href="/materials" class="btn btn-primary btn-large">Selaa materiaaleja &raquo;</a>
     <a href="/courses" class="btn btn-primary btn-large">Selaa kursseja &raquo;</a>
-    <a href="/register" class="btn btn-primary btn-large">Lisää oma &raquo;</a>
+    <a href="/add" class="btn btn-primary btn-large">Lisää oma &raquo;</a>
   </div>
 
   
   <div class="row">
-
     <!-- NEW MATERIALS -->
     <div class="span4">
       <!-- NAVBAR -->
@@ -30,20 +29,29 @@ $var show_login_form: True
       <!-- ITEMS -->
       $for m in new_materials:
       <div class="material-listitem $loop.parity">
-        <div class="listitem-info">
-          <a href="#"><i class="icon-user"></i>$m.name</a> $m.date_added
+        <div class="left">
+          <div class="course">
+            <span class="label label-info">$m.code</span><a rel="tooltip" data-placement="right" title="$m.description" href="/download/$m.id"> $m.title</a>
+            <small>.$m.type</small>
+          </div>
+
+          <div class="userinfo">
+            <!-- <i class="icon-user"></i> -->
+            <a href="#">$m.name</a> <small>$format_date(m.date_added) - 
+            <a href="#" class="comments">Kommentteja: 12</a></small>
+          </div>
+        </div><!-- /.left -->
+
+        <div class="right pull-right">
           <span class="badge badge-success pull-right">$m.points</span>
+          <a href=""><i class="icon-plus"></i></a>
         </div>
-        <span>
-          $m.code
-          : <a href="/materials/$m.id">$m.title</a>
-        </span>
-        <div class="listitem-comments"><a href="">Kommentteja: 12</a></div>
-      </div>
-    </div>
+      </div><!--/.material-listitem-->
+    </div><!--/.span*-->
+
 
     <!-- TOP MATERIALS -->
-    <div class="span6">
+    <div class="span4">
       <!-- NAVBAR -->
       <div class="navbar">
         <div class="navbar-inner">
@@ -53,19 +61,62 @@ $var show_login_form: True
         </div>
       </div>
       <!-- ITEMS -->
-      <table class="table table-striped table-condensed itemtable">
-        <tbody>
-          $for m in top_materials:
-          <tr>
-            <td><small>$m.title</small></td>
-            <td><a href="/courses/$m.course_id">$m.code</a></td>
-            <td><span class="badge badge-success">$m.points</span></td>
-            <td><span class="label"><i class="icon-user"></i>$m.name</span></td>
-            <td><small>$m.date_added</small></td>
-          </tr>
-        </tbody>
-      </table>  
-    </div>
+      $for m in top_materials:
+      <div class="material-listitem $loop.parity">
+        <div class="left">
+          <div class="course">
+            <span class="label label-info">$m.code</span><a rel="tooltip" title="$m.description" href="/download/$m.id"> $m.title</a>
+            <small>.$m.type</small>
+          </div>
 
-  </div> <!-- /row -->
-</div>
+          <div class="userinfo">
+            <!-- <i class="icon-user"></i> -->
+            <a href="#">$m.name</a> <small>$format_date(m.date_added) - 
+            <a href="#" class="comments">Kommentteja: 12</a></small>
+          </div>
+        </div><!-- /.left -->
+
+        <div class="right pull-right">
+          <span class="badge badge-success pull-right">$m.points</span>
+          <a href="" data-id="$m.id"><i class="icon-plus"></i></a>
+        </div>
+      </div><!--/.material-listitem-->
+    </div><!--/.span*-->
+
+  </div><!--/.row-->
+</div><!--/.container-->
+
+<script> 
+window.onload = function(){
+    // Enable tooltips on course names:
+    $$("[rel='tooltip']").tooltip();
+    // Show plus-signs next to points displays when hovering:
+    $$(".right>a").css("visibility", "hidden");
+    $$(".material-listitem").hover(function(){
+        $$(this).children(".right").children("a").css("visibility", "visible");
+    }, function() {
+        $$(this).children(".right").children("a").css("visibility", "hidden");
+    });
+    // Perform Ajax operation when liking a material:
+    $$(".right>a").click(function () {
+        var id = $$(this).attr("data-id"),
+            clicked = this,
+            points_display = $$(clicked).siblings(":first");
+        $$.ajax({
+            type: "GET",
+            url: "/like",
+            data: {id: id},
+            success: function(data) {
+                if (data=="") {
+                    var points = parseInt($$(points_display).text()) + 1;
+                    $$(points_display).text(points);
+                } else {
+                    $$(points_display).removeClass("badge-success").addClass("badge-important");
+                }
+            },
+            dataType: "text"
+        });
+    return false;
+    });
+}
+</script>
